--- a/bevy_2settings/Cargo.toml
+++ b/bevy_2settings/Cargo.toml
@@ -12,7 +12,7 @@ keywords = ["bevy", "settings"]
 
 
 [dependencies]
-bevy_2settings_macro = { path = "../bevy_2settings_macro" }
+bevy_2settings_macro = { path = "../bevy_2settings_macro", version = "0.0.1" }
 bevy = "0.16"
 serde = { version = "1.0.219", features = ["derive"] }
 toml = "0.8.22"
